--- a/package.json
+++ b/package.json
@@ -1,19 +1,27 @@
+
 {
   "name": "mryw-utils-windows",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "keywords": [
+    "utility",
+    "debounce",
+    "throttle",
+    "deepClone"
+  ],
+  "author": "mRyw",
+  "license": "MIT",
+  "description": "A mini utility library for JavaScript, providing functions like debounce, throttle, and deepClone.",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/mangoRyw/mryw-utils-windows.git"
+    "url": "https://github.com/mangoRyw/mryw-utils-windows.git"
   },
-  "author": "mRyw",
-  "license": "ISC",
   "bugs": {
     "url": "https://github.com/mangoRyw/mryw-utils-windows/issues"
   },
   "homepage": "https://github.com/mangoRyw/mryw-utils-windows#readme",
-  "description": ""
+  "category": "Utilities"
 }
